--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= yield(:title) %> | introduce</title>
+    <title><%= full_title(yield(:title)) %> </title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="UTF-8">
     <%= csrf_meta_tags %>
@@ -12,6 +12,8 @@
   </head>
 
   <body>
+  <%= render "layouts/header" %>
     <%= yield %>
+  <%= render "layouts/footer" %>
   </body>
 </html>
