--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
-<% provide(:title, "Home") %>
-<h1>観光場所</h1>
-<p>
-    this is aaa
-</p>
+<div class="main-visual">
+  <h2>関西のカフェのreview<br></h2>
+  <%= link_to "Start", main_path, class: 'btn' %>
+</div>
+
 
