--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
   </h1>
   <nav class ="pc-nav">
     <ul>
-      <li><%= link_to "Create Account",    "#" %></li>
+      <li><%= link_to "Create Account",    createacount_path %></li>
       <li><%= link_to "Login",    "#" %></li>
       <li><%= link_to "Contact",    contact_path %></li>
     </ul>
