--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
   </small>
   <nav>
     <ul>
-      <li><a href="https://news.railstutorial.org/">News</a></li>
+      <li><%= link_to "News",    "#" %></li>
     </ul>
   </nav>
 </footer>
