--- a/app/views/static_pages/main_view.html.erb
+++ b/app/views/static_pages/main_view.html.erb
@@ -7,6 +7,36 @@
   <title>Document</title>
 </head>
 <body>
-<h1>aaaaassd</h1>
+<div id="contents">
+  <div class="main-area">
+    <p>a</p>
+    <p>cc</p>
+
+  </div>
+
+  <main class="column">
+    <!--メインエリア-->
+    <div class="main-area">
+      <div class ="btn-area">
+        <li>
+          <a href="#">絞り込み(カフェの種類を選択してください。)</a><br>
+          <a href="#">aaa</a><br>
+        </li>
+      </div>
+      <%= image_tag "map.png" %>
+    </div>
+    <!--/.main-area-->
+
+
+    <div class="sub-area">
+      <p>検索結果(**************件)🔍</p>
+      <%= image_tag "1.jpg" %>
+    </div>
+    <!--/.sub-area-->
+
+  </main>
+
+</div>
+
 </body>
 </html>
