--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,8 @@
 <div class="main-visual">
-  <h2>関西のカフェのreview<br></h2>
+  <h2>カフェ検索アプリ<br>
   <%= link_to "Start", main_path, class: 'btn' %>
+  </h2>
+  <div class = "intro">
+    <%= image_tag "setumi.png" %>
+  </div>
 </div>
