--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,9 +4,9 @@
   </h1>
   <nav class ="pc-nav">
     <ul>
-      <li><%= link_to "Create Account",    createacount_path %></li>
-      <li><%= link_to "Login",    "#" %></li>
-      <li><%= link_to "Contact",    contact_path %></li>
+      <li><%= link_to "アカウント新規作成",    createacount_path %></li>
+      <li><%= link_to "ログイン",    "#" %></li>
+      <li><%= link_to "マイページ",    "#" %></li>
     </ul>
   </nav>
 </header>
