--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,14 @@
 
   <body>
   <%= render "layouts/header" %>
-    <%= yield %>
-  <%= render "layouts/footer" %>
-  <%= debug(params) if Rails.env.development? %>
+  <div class="container">
+    <% flash.each do |message_type, message| %>
+      <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
+
+      <%= yield %>
+    <%= debug(params) if Rails.env.development? %>
+    <%= render "layouts/footer" %>
+  </div>
   </body>
 </html>
