--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,9 @@
 <div class="main-visual">
-  <h2>カフェ検索アプリ<br>
-  <%= link_to "Start", main_path, class: 'btn' %>
-  </h2>
+  <h2>Cafe Land</h2>
+    <%= link_to "はじめる", main_path, class: 'btn' %>
+  <!--
   <div class = "intro">
-    <%= image_tag "setumi.png" %>
+    <%# <%= image_tag "setumi.png" %> %>
   </div>
+  -->
 </div>
