--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <h1>
-    <%= link_to "cafe search",    root_path %>
+    <%= link_to "cafe Land",    root_path %>
   </h1>
   <nav class ="pc-nav">
     <ul>
-      <li><%= link_to "アカウント新規作成",    createacount_path %></li>
+      <li><%= link_to "アカウント作成",    createacount_path %></li>
       <li><%= link_to "ログイン",    "#" %></li>
       <li><%= link_to "マイページ",    "#" %></li>
     </ul>
