--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -157,6 +157,23 @@ footer {
   color: #777;
   bottom: 0;
 }
+@media (max-width: 800px) {
+  footer {
+    small {
+      display: block;
+      float: none;
+      margin-bottom: 1em;
+    }
+    ul {
+      float: none;
+      padding: 0;
+      li {
+        float: none;
+        margin-left: 0;
+      }
+    }
+  }
+}
 
 footer a {
   color: #555;
@@ -353,3 +370,8 @@ main.column .main-area {
   cursor: pointer;
 }
 
+/* Dropdown menu */
+
+.dropdown-menu.active {
+  display: block;
+}
