--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="main-visual">
-  <h2>Cafe Land</h2>
+  <h2>Cafe Vista</h2>
     <%= link_to "はじめる", main_path, class: 'btn' %>
   <!--
   <div class = "intro">
