--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <h1>
-    <%= link_to "cafe Land",    root_path %>
+    <%= link_to "cafe Vista",    root_path %>
   </h1>
   <nav class ="pc-nav">
     <div class="navbar-header">
@@ -23,7 +23,7 @@
           </a>
           <ul id="dropdown-menu" class="dropdown-menu">
             <li><%= link_to "Profile", current_user %></li>
-            <li><%= link_to "Settings", '#' %></li>
+            <li><%= link_to "Settings", edit_user_path(current_user) %></li>
             <li class="divider"></li>
             <li>
               <%= link_to "Log out", logout_path,
