--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="main-visual">
   <h2>Cafe Vista</h2>
-    <%= link_to "はじめる", main_path, class: 'btn' %>
+    <%= link_to "はじめる(暇つぶし　1日１ずつ機能追加)", main_path, class: 'btn' %>
   <!--
   <div class = "intro">
     <%# <%= image_tag "setumi.png" %> %>
