--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,20 @@
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+      <section class="micropost_form">
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3>Micropost Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
+  </div>
+<% else %>
+
 <div class="main-visual">
   <h2>Cafe Vista</h2>
     <%= link_to "はじめる(暇つぶし　1日１ずつ機能追加)", main_path, class: 'btn' %>
@@ -7,3 +24,5 @@
   </div>
   -->
 </div>
+
+<% end %>
