--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -12,9 +12,8 @@ $gray-medium-light: #eaeaea;
 }
 
 body {
-  padding-top: 60px;
+  padding-top: 10px;
   margin: 0;
-  font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", メイリオ, Meiryo, "ＭＳ Ｐゴシック", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 }
 
@@ -62,7 +61,8 @@ p {
 
 
 header {
-  padding: 30px 4% 10px;
+  z-index: 1000; /* ヘッダーを他の要素よりも上に表示 */
+  padding: 10px 4% 10px;
   position: fixed;
   top: 0;
   width: 100%;
@@ -72,7 +72,7 @@ header {
 
 header h1 {
   margin: 0; padding: 0;
-  font-size: 23px;
+  font-size: 21px;
   font-family: 'Caveat', cursive;
 }
 
@@ -93,7 +93,7 @@ header ul {
 }
 
 header li {
-  margin: 0 0 0 15px;
+  margin: 0 0 0 10px;
   font-size: 14px;
 
 }
@@ -102,15 +102,24 @@ header nav {
   margin: 0 0 0 auto;
 }
 
+.main-content {
+  padding-top: 50px; /* ヘッダーの高さ分の余白を追加 */
+  z-index: 999; /* コンテンツをヘッダーよりも下に表示 */
+  /* その他のスタイル */
+}
+
 .main-visual {
   display: flex;
   justify-content: center;
   align-items: flex-end;
   height: 100vh;
-  background: url("cafe_index.jpg") top center / cover no-repeat;
+  background: url("cafe_index.jpg") center center / cover no-repeat;
   position: relative;
+  background-size: cover; /* 背景画像が要素全体をカバーするように調整 */
 
 }
+
+
 
 .main-visual h2 {
   position: absolute;
@@ -133,7 +142,7 @@ header nav {
 
 .main-visual .intro img {
   width: 50%;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 h2 {
@@ -144,8 +153,27 @@ h2 {
 }
 .main-visual .btn{
   color: black;
-  font-size: 40px;
-  line-height: 750px;
+  font-size: 20px;
+  border-top: 4px solid #ece1c0;
+  border-right: 4px solid #ece1c0;
+  border-bottom: 4px solid #ece1c0;
+  border-left: 4px solid #ece1c0;
+  border-radius: 0;
+  background: #d5bc6b;
+}
+
+.start-btn{
+  font-family:"MS Pゴシック",sans-serif;
+  position: relative;
+  top: 60px; /* ボタンを上に移動 */
+}
+
+.main-visual .btn:hover {
+  color: #fff;
+  border-top: 4px solid #f5f5f1;
+  border-right: 4px solid #f5f5f1;
+  border-bottom: 4px solid #f5f5f1;
+  border-left: 4px solid #f5f5f1;
 }
 
 /* footer */
@@ -323,18 +351,7 @@ input {
   }
 }
 
-#contents {
-  flex: 1;
-  padding: 1%; /* コンテンツ内の余白 */
-  height: 100%;
-  display: flex; /* flexボックスを使う指定 */
-  flex-direction: column; /* 子要素を縦並びにする */
-  justify-content: space-between; /* 並び方の指定 */
-  max-width: 100%; /* サイトの最大幅。これ以上広がらない。 */
-  margin: 0 auto;
-  background: rgba(255, 255, 255, 0.9) url("home_b.jpeg"); /* 背景の指定（透過度も含む） */
-  background-size: cover; /* 画像をアスペクト比を維持したまま親要素いっぱいに表示 */
-}
+
 
 /* 画像全般の設定 */
 img {
@@ -484,4 +501,103 @@ span.image {
   input {
     border: 0;
   }
+}
+
+/* layout */
+body, p, form, input {
+  margin: 0;
+}
+
+#form {
+  width: 400px;
+  margin: 30px auto;
+  padding: 20px;
+  border: 1px solid #555;
+}
+
+form p {
+  font-size: 14px;
+}
+
+.form-title {
+  text-align: center;
+}
+
+.mail,
+.pass {
+  margin-bottom: 20px;
+}
+
+input[type="email"],
+input[type="password"],
+input[type="text"] {
+  width: 300px;
+  padding: 4px;
+  font-size: 14px;
+}
+
+.submit {
+  text-align: right;
+}
+
+/*ログイン画面などの書き込みフォーム用のcss*/
+#form p {
+  color: #000000;
+  font-weight: bold;
+  text-align: center; /* テキストを中央揃えに*/
+}
+
+#form .form-title {
+  font-family: Arial;
+  font-size: 20px;
+  color: #000000;
+}
+
+#form .form-title1 {
+  font-family: 'Caveat', cursive;
+  font-size: 40px;
+  color: #595656;
+}
+
+/* skin */
+#form {
+  width: 500px; /* 例: 横幅を400pxに指定 */
+  border-radius: 6px;
+  box-shadow: 0px 1px 10px #ef9f4a;
+  border: solid #eec59a 1px;
+  background: #fafafa;
+}
+
+#form .form-title {
+  padding-bottom: 6px;
+  border-bottom: 2px solid #ef9f4a;
+  margin-bottom: 10px;
+}
+
+#form .form-control {
+  width: 400px; /* 入力フィールドの幅を指定 */
+  margin: 0 auto; /* 左右に自動マージンを設定して中央に配置 */
+}
+
+
+.submit {
+  text-align: center; /* ボタンを中央に配置 */
+}
+.submit input {
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 16px;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 10px;
+  box-shadow: 0px 8px 6px #e3e3e3;
+  border: solid #f5fdff 4px;
+  background: -webkit-gradient(linear, 0 0, 0 100%, from(#ef9f4a), to(#e8b278));
+  background: -moz-linear-gradient(top, #ef9f4a, #e8b278);
+  width: 200px; /* 横幅を200pxに指定 */
+}
+
+.submit input:hover {
+  background: #e8b278;
+  border: 4px solid #e8b278; /* ホバー時の枠線の色を指定 */
 }
