--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
     </div>
     <ul id="navbar-menu"
         class="nav navbar-nav navbar-right collapse navbar-collapse">
-      <li><%= link_to "アカウント作成",    createacount_path %></li>
+      <li><%= link_to "新規登録",    createacount_path %></li>
       <li><%= link_to "Home", root_path %></li>
       <% if logged_in? %>
         <li><%= link_to "Users", users_path %></li>
