--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,13 +1,18 @@
 <% provide(:title, "Forgot password") %>
-<h1>Forgot password</h1>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
+<div id="form">
+  <p class="form-title1">Cafe Vista</p>
+  <p class="form-title">パスワード再登録</p>
     <%= form_with(url: password_resets_path, scope: :password_reset) do |f| %>
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
 
-      <%= f.submit "Submit", class: "btn btn-primary" %>
+    <p>登録したメールアドレスを入力してください<br>パスワード再設定のためのメールを送ります</p>
+    <p class="mail">
+      <%= f.email_field :email, class: 'form-control' %>
+    </p>
+
+    <p class="submit">
+      <%= f.submit "送信", class: "btn btn-primary" %>
+    </p>
     <% end %>
   </div>
-</div>
+
