--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,23 +1,32 @@
-<% provide(:title, 'create_account') %>
-<h1>Sign up</h1>
+<% provide(:title, 'アカウント新規登録') %>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_with(model: @user) do |f| %>
-      <%= render 'shared/error_messages', object: f.object %>
-      <%= f.label :name %>
+<div id="form">
+  <p class="form-title1">Cafe Vista</p>
+  <p class="form-title">アカウント新規登録</p>
+  <%= form_with(model: @user) do |f| %>
+    <%= render 'shared/error_messages', object: f.object %>
+    <p>名前</p>
+    <p class="name">
       <%= f.text_field :name, class: 'form-control' %>
+    </p>
 
-      <%= f.label :email %>
+    <p>メールアドレス</p>
+    <p class="mail">
       <%= f.email_field :email, class: 'form-control' %>
+    </p>
 
-      <%= f.label :password %>
+    <p>パスワード</p>
+    <p class="pass">
       <%= f.password_field :password, class: 'form-control' %>
+    </p>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
+    <p>パスワード確認用(もう一度入力してください)</p>
+    <p class="pass">
       <%= f.password_field :password_confirmation, class: 'form-control' %>
+    </p>
 
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
-    <% end %>
-  </div>
+    <p class="submit">
+      <%= f.submit "登録", class: "btn btn-primary" %>
+    </p>
+  <% end %>
 </div>
