--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -103,7 +103,7 @@ header nav {
 }
 
 .main-content {
-  padding-top: 50px; /* ヘッダーの高さ分の余白を追加 */
+  padding-top: 60px; /* ヘッダーの高さ分の余白を追加 */
   z-index: 999; /* コンテンツをヘッダーよりも下に表示 */
   /* その他のスタイル */
 }
@@ -286,11 +286,8 @@ aside {
     }
     &:hover {
       text-decoration: none;
-      color: blue;
+      color: #ef9f4a;
     }
-  }
-  strong {
-    display: block;
   }
 }
 
@@ -367,9 +364,23 @@ main {
 
 }
 
+.meter-area {
+  border: 2px solid #ef9f4a; /* 枠線を追加 */
+  margin-left: 20px;
+  margin-right: 20px;
+  border-radius: 8px; /* 枠線の角を丸くする場合 */
+}
+
+.btn-area {
+  margin-top: 30px;
+  margin-left: 20px;
+  margin-right: 744px;
+  border: 2px solid #ef9f4a; /* 枠線を追加 */
+  border-radius: 8px; /* 枠線の角を丸くする場合 */
+}
+
 .btn-area li {
   display: flex;
-  border-bottom: 3px solid #cddc39;
   flex-direction: row; /* デフォルトの方向は横になっているので不要かもしれませんが、明示的に指定 */
 }
 
@@ -400,6 +411,9 @@ main.column .main-area {
 
   /*メインエリア*/
   main.column .main-area {
+    border: 2px solid #ef9f4a; /* 枠線を追加 */
+    border-radius: 8px; /* 枠線の角を丸くする場合 */
+    margin-top: 20px;
     margin-bottom: 0;
     order: 2;				/*並び順。数字の小さい順番に表示されます。*/
     flex: 0.8;
@@ -407,14 +421,18 @@ main.column .main-area {
     height: 450px;
   }
 
-  /* サブエリア */
   main.column .sub-area {
     order: 1;
-    width: 380px;
-    max-height: 450px; /* 適切な高さに設定（高さが一定の場合、縦スクロールが有効になります） */
-    overflow-y: scroll; /* 常に縦スクロールバーを表示 */
-
+    width: 500px;
+    max-height: 450px;
+    overflow-y: scroll;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    border: 2px solid #ef9f4a; /* 枠線を追加 */
+    border-radius: 8px; /* 枠線の角を丸くする場合 */
   }
+
 }
 
 /* 画像 */
@@ -425,7 +443,7 @@ main.column .main-area {
 .fixed_btn {
   position: fixed;
   bottom: 40px;
-  right: 60px;
+  right: 40px;
   width: 90px; /* 任意の大きさを設定 */
   height: 90px; /* 任意の大きさを設定 */
   padding: 10px; /* 少し調整 */
@@ -601,3 +619,6 @@ input[type="text"] {
   background: #e8b278;
   border: 4px solid #e8b278; /* ホバー時の枠線の色を指定 */
 }
+
+
+
