--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,21 +13,21 @@
     </div>
     <ul id="navbar-menu"
         class="nav navbar-nav navbar-right collapse navbar-collapse">
-      <li><%= link_to "新規登録",    createacount_path %></li>
-      <li><%= link_to "Home", root_path %></li>
+      <li><%= link_to "Home", main_path %></li>
+      <li><%= link_to "投稿する", "post" %></li>
       <% if logged_in? %>
-        <li><%= link_to "Users", users_path %></li>
+        <li><%= link_to "全ユーザ(DM)", users_path %></li>
         <li class="dropdown">
           <a href="#" id="account" class="dropdown-toggle">
-            Account <b class="caret"></b>
+            アカウント <b class="caret"></b>
           </a>
           <ul id="dropdown-menu" class="dropdown-menu">
-            <li><%= link_to "Profile", current_user %></li>
-            <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+            <li><%= link_to "アカウント情報", current_user %></li>
+            <li><%= link_to "編集", edit_user_path(current_user) %></li>
+            <li><%= link_to "新規登録",    createacount_path %></li>
             <li class="divider"></li>
             <li>
-              <%= link_to "Log out", logout_path,
-                          data: { "turbo-method": :delete } %>
+              <%= link_to "ログアウト", logout_path, data: { "turbo-method": :delete } %>
             </li>
           </ul>
         </li>
