--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,5 +1,7 @@
-<%= link_to gravatar_for(current_user, size: 50), current_user %>
-<h1><%= current_user.name %></h1>
-<span><%= link_to "view my profile", current_user %></span>
-<span><%= pluralize(current_user.microposts.count, "micropost") %></span>
+<div class = "user-info">
+  <%= link_to gravatar_for(current_user, size: 50), current_user %>
+  <p><%= current_user.name %></p>
+  <span><%= link_to "過去の投稿", current_user %></span>
+  <span><%= pluralize(current_user.microposts.count, "micropost") %></span>
+</div>
 
