--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,9 @@
 
 <% provide(:title, 'All users') %>
-<h1>All users</h1>
-
-<%= will_paginate %>
+<h1>Cafe Vistaに登録している全ユーザ</h1>
 
 <ul class="users">
   <%= render @users %>
 </ul>
 
-<%= will_paginate %>
+<%= paginate @users %>
