--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,6 +11,24 @@
       <a href="https://gravatar.com/emails">change</a>
     </div>
 
+
+    <!----- プロフィール画像 ------>
+    <div class="mt-3 mb-5 <%= @user.errors.include?(:avatar) ? "validation_errors" : "" %>">
+      <!------ 画像の添付 ------>
+      <%= f.label :avatar, '画像(5MBまで)', class: "form-label fw-bold" %><br>
+      <%= f.file_field :avatar, onchange: "avatarImage(this);", accept: "image/jpeg,image/gif,image/png", class: "mb-3" %>
+      <%= render 'layouts/error_messages',class: "invalid-feedback", obj: @user, key: :avatar %>
+      <!------ 添付画像のプレビューを表示 ------>
+      <div id="avatar" >
+        <img id="avatar_preview" class="mb-3" width="100">
+      </div>
+      <!------ 現在DBに登録(保存)されている画像を表示 ------>
+      <% if @user.avatar.present? %> <!-- @user.avatarが存在する場合のみ image_tag を使用(if文ないとエラーが出る) -->
+        <span><b>[現在登録されている画像]</b></span>
+        <%= image_tag @user.avatar, width: 200, class: "mb-2" %>
+      <% end %>
+    </div>
+
     <p>名前</p>
     <p class="name">
       <%= f.text_field :name, class: 'form-control' %>
@@ -36,3 +54,14 @@
     </p>
   <% end %>
 </div>
+
+
+<script>
+    function avatarImage(obj){
+        var fileReader = new FileReader();
+        fileReader.onload = (function() {
+            document.getElementById('avatar_preview').src = fileReader.result;
+        });
+        fileReader.readAsDataURL(obj.files[0]);
+    }
+</script>
