--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,7 @@
   <aside class="col-md-4">
     <section>
       <h1>
+        a aaa
         <%= gravatar_for @user %>
         <%= @user.name %>
       </h1>
